--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,9 +34,17 @@
 
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dip"
         android:visibility="invisible"
         android:id="@+id/web">
-
     </WebView>
+
+    <WebView
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:scrollbars="none"
+        android:id="@+id/webgit">
+    </WebView>
+
 </LinearLayout>
