--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/timeinfo"
         android:orderInCategory="100"
-        android:title="版本信息"
+        android:title="时间助手"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/bug_deliver"
+        android:orderInCategory="100"
+        android:title="错误报告"
         app:showAsAction="never" />
 </menu>
