--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -10,6 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="@drawable/wallpaper_4"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="thinkwee.buptroom.MainActivity"
     android:layout_centerHorizontal="true"
@@ -29,6 +30,7 @@
             android:textSize="18sp"
             android:shadowRadius="3.0"
             android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             android:text="Just a test of Version"
             android:id="@+id/show_content"/>
     </ScrollView>
