--- a/app/src/main/res/layout/building_1.xml
+++ b/app/src/main/res/layout/building_1.xml
@@ -24,7 +24,8 @@
             android:shadowRadius="3.0"
             android:textStyle="bold"
             android:text="jiao1"
-            android:id="@+id/show_content_1"/>
+            android:textColor="@color/colorAccent"
+            android:id="@+id/show_content"/>
     </ScrollView>
 
 
