--- a/app/src/main/res/layout/building_3.xml
+++ b/app/src/main/res/layout/building_3.xml
@@ -24,6 +24,7 @@
             android:shadowRadius="3.0"
             android:textStyle="bold"
             android:text="jiao3"
+            android:textColor="@color/colorAccent"
             android:id="@+id/show_content"/>
     </ScrollView>
 
