--- a/app/src/main/res/layout/building_library.xml
+++ b/app/src/main/res/layout/building_library.xml
@@ -25,6 +25,7 @@
             android:shadowRadius="3.0"
             android:textStyle="bold"
             android:text="jiao4"
+            android:textColor="@color/colorAccent"
             android:id="@+id/show_content"/>
     </ScrollView>
 
