--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,10 @@
         <item android:title="软件信息">
             <menu>
                 <item
+                    android:id="@+id/theme_choose"
+                    android:icon="@drawable/ic_menu_help"
+                    android:title="选择主题" />
+                <item
                     android:id="@+id/developer_opensource"
                     android:icon="@drawable/ic_menu_help"
                     android:title="作者及开源信息" />
