--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +7,6 @@
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="thinkwee.buptroom.SettingActivity"
-    android:theme="@style/AppTheme.NoActionBar"
 >
 
     <android.support.v7.widget.Toolbar
@@ -15,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
+        android:theme="@style/SettingToolbarTheme"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         >
     </android.support.v7.widget.Toolbar>
@@ -33,4 +33,4 @@
 
     </ListView>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
