--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2D658A</color>
-    <color name="colorPrimaryDark">#2D658A</color>
+    <color name="colorPrimary">#0C091E</color>
+    <color name="colorPrimaryDark">#0C091E</color>
     <color name="colorAccent">#FFFFFF</color>
     <color name="TextBackGroundColor">#55D8D8D8</color>
+    <color name="TextBackGroundColorWelcome">#BB2E2E2E</color>
+
 
     <color name="ripple">#A4A4A4</color>
     <color name="ripple_white">#FFFFFF</color>
