--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,6 +16,11 @@
     android:visibility="invisible"
    >
 
+    <!--这个Layout完全不显示，
+    是以前版本遗留的，
+    但是不能删，
+    因为依靠其中的Webview拉取教室信息-->
+
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
