--- a/app/src/main/res/layout/fragment_building.xml
+++ b/app/src/main/res/layout/fragment_building.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/wallpaper_4">
 
+    <!--教室显示界面，
+    ViewPager用来整合前面五个楼的界面，使之可以左右滑动
+    PagerTabStrip是ViewPager一个组件，可以在每个滑动页面上方显示标题-->
+
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
