--- a/app/src/main/res/layout/setting_item.xml
+++ b/app/src/main/res/layout/setting_item.xml
@@ -12,6 +12,8 @@
 
     >
 
+    <!--设置菜单每一栏-->
+
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="45dp"
