--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,6 +14,8 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:weightSum="1">
 
+    <!--看显示效果就知道是什么了-->
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
