--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical"
     >
 
+    <!--软件启动欢迎界面-->
+
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
