--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,10 @@
                     android:id="@+id/jiaoshi"
                     android:icon="@drawable/ic_menu_home"
                     android:title="空闲教室查询" />
+                <item
+                    android:id="@+id/shake"
+                    android:icon="@drawable/ic_menu_home"
+                    android:title="摇一摇" />
             </menu>
         </item>
         <item android:title="软件信息">
