--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/welcome2"
+    android:background="@drawable/nav_header_wallpaper"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,10 +16,13 @@
 
     <!--看显示效果就知道是什么了-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/profile"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:scaleType="fitXY"
+        android:background="@color/transparent"
+        android:onClick="ProfileBt"
         android:src="@mipmap/launcher" />
 
     <TextView
@@ -27,13 +30,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:id="@+id/timeinfo"
-        android:text="北邮空闲教室查询系统"
+        android:text="欢迎回来"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="thinkwee2767@gmail.com" />
+        android:text="北邮自习室查询APP" />
 
 </LinearLayout>
