--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -50,5 +50,13 @@
         android:layout_above="@+id/chicken_soup"
         android:layout_alignParentStart="true" />
 
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/GetHtml"
+        android:visibility="invisible">
+
+    </WebView>
+
 
 </RelativeLayout>
