--- a/app/src/main/res/layout/shake_test.xml
+++ b/app/src/main/res/layout/shake_test.xml
@@ -24,14 +24,14 @@
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:clickable="true"
             android:layout_height="85dp"
             android:gravity="center"
@@ -39,8 +39,7 @@
             android:textStyle="bold"
             android:background="@color/TextBackGroundColor"
             android:textColor="@color/colorAccent"
-            android:text="1"
-            android:id="@+id/shaketext1"
+            android:text="此时我们为您推荐的教室是"
             android:layout_marginTop="15dp"/>
         <Button
             android:layout_width="wrap_content"
@@ -52,19 +51,7 @@
             android:background="@color/TextBackGroundColor"
             android:textColor="@color/colorAccent"
             android:text="2"
-            android:id="@+id/shaketext2"
-            android:layout_marginTop="15dp"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:clickable="true"
-            android:layout_height="85dp"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:id="@+id/shaketext3"
-            android:background="@color/TextBackGroundColor"
-            android:textColor="@color/colorAccent"
-            android:text="3"
+            android:id="@+id/RecommandRoom"
             android:layout_marginTop="15dp"/>
     </LinearLayout>
 
