--- a/app/src/main/res/layout/shake_test.xml
+++ b/app/src/main/res/layout/shake_test.xml
@@ -42,7 +42,7 @@
             android:text="此时我们为您推荐的教室是"
             android:layout_marginTop="15dp"/>
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:clickable="true"
             android:layout_height="85dp"
             android:gravity="center"
