--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,32 +7,32 @@
             <menu>
                 <item
                     android:id="@+id/homepage"
-                    android:icon="@drawable/ic_menu_home"
+                    android:icon="@drawable/home"
                     android:title="首页" />
                 <item
                     android:id="@+id/jiaoshi"
-                    android:icon="@drawable/ic_menu_search_holo_light"
+                    android:icon="@drawable/search"
                     android:title="空闲教室查询" />
                 <item
                     android:id="@+id/shake"
-                    android:icon="@drawable/ic_menu_myplaces"
+                    android:icon="@drawable/shake"
                     android:title="摇一摇" />
             </menu>
         </item>
-        <item android:title="软件信息">
+        <item android:title="说明">
             <menu>
                 <item
                     android:id="@+id/theme_choose"
-                    android:icon="@drawable/ic_menu_help"
+                    android:icon="@drawable/theme"
                     android:title="选择主题" />
                 <item
                     android:id="@+id/developer_opensource"
-                    android:icon="@drawable/ic_menu_share"
-                    android:title="作者及开源信息" />
+                    android:icon="@drawable/share"
+                    android:title="软件信息" />
                 <item
                     android:id="@+id/version"
-                    android:icon="@drawable/ic_menu_emoticons"
-                    android:title="版本说明" />
+                    android:icon="@drawable/version"
+                    android:title="版本介绍" />
             </menu>
         </item>
     </group>
