--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:orientation="vertical"
+    android:id="@+id/settinglayout"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="thinkwee.buptroom.SettingActivity"
 >
@@ -22,18 +23,21 @@
         >
     </android.support.v7.widget.Toolbar>
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:id="@+id/listview_setting"
-        android:clickable="true"
-        android:footerDividersEnabled="true"
-        android:focusable="true"
-        android:elevation="0dp"
-        android:listSelector="@color/colorPrimaryDarkBlack">
+    <thinkwee.buptroom.ColorPicker
+        android:id="@+id/colorPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="0sp"
+        android:layout_gravity="center"
+        android:layout_weight="0.8"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/getcolor"
+        android:text="选取颜色"
+        android:layout_gravity="center"
+        />
 
 
-    </ListView>
 
 </LinearLayout>
