--- a/app/src/main/res/layout-v23/fragment_building.xml
+++ b/app/src/main/res/layout-v23/fragment_building.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/buildinglayout"
+    android:id="@+id/buildinglayout1"
     android:background="@drawable/wallpaper_4">
 
     <!--教室显示界面，
