--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -29,13 +29,12 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:gravity="center_horizontal"
             android:textSize="18sp"
             android:shadowRadius="3.0"
             android:textStyle="bold"
             android:textColor="@color/colorAccent"
-            android:text="Just a test of Version"
+            android:text="@string/just_a_test_of_version"
             android:id="@+id/show_content"/>
     </ScrollView>
 
