--- a/app/src/main/res/layout/building_1.xml
+++ b/app/src/main/res/layout/building_1.xml
@@ -13,7 +13,7 @@
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:scrollbars="none"
         android:layout_marginTop="15dp"
@@ -22,7 +22,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
