--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -2,61 +2,58 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <!--软件启动欢迎界面-->
 
     <ImageView
+        android:id="@+id/welcomeimg"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitXY"
-        android:id="@+id/welcomeimg"
-        android:src="@drawable/welcome2"/>
+        android:src="@drawable/welcome2" />
 
     <Button
-        android:layout_width="fill_parent"
-        android:clickable="true"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:background="@color/TextBackGroundColorWelcome"
-        android:textColor="@color/colorAccent"
-        android:text="\n  “We're here to put a dent in the universe”  \n"
         android:id="@+id/chicken_soup"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@color/TextBackGroundColorWelcome"
+        android:clickable="true"
+        android:gravity="center"
+        android:text="\n  “We're here to put a dent in the universe”  \n"
+        android:textColor="@color/colorAccent"
+        android:textSize="16sp" />
 
     <Button
-        android:layout_width="fill_parent"
-        android:clickable="true"
-        android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
-        android:textSize="25sp"
-        android:background="@color/TextBackGroundColorWelcome"
-        android:textColor="@color/colorAccent"
-        android:text="  BuptRoom"
         android:id="@+id/welcome_title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/chicken_soup"
         android:layout_toRightOf="@+id/welcome_icon"
-         />
+        android:background="@color/TextBackGroundColorWelcome"
+        android:clickable="true"
+        android:gravity="left|center_vertical"
+        android:text="  BuptRoom"
+        android:textColor="@color/colorAccent"
+        android:textSize="25sp" />
 
     <ImageButton
+        android:id="@+id/welcome_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/welcome_icon"
-        android:background="@color/TextBackGroundColorWelcome"
-        android:src="@mipmap/launcher"
         android:layout_above="@+id/chicken_soup"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@color/TextBackGroundColorWelcome"
+        android:src="@mipmap/launcher" />
 
     <WebView
+        android:id="@+id/GetHtml"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/GetHtml"
-        android:visibility="invisible">
+        android:visibility="invisible"></WebView>
 
-    </WebView>
 
 
 </RelativeLayout>
